--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,7 +114,8 @@ img {
   &-subtitle {
     display: block;
     font-size: 15px;
-    font-weight: $font-medium;
+    font-weight: $font-semibold;
+    color: $red-color;
     margin-bottom: $margin-1;
   }
 
@@ -305,5 +306,52 @@ img {
     display: inline-flex;
     background-color: $red-color;
     color: $white-color;
+  }
+}
+
+// ===== SERVICE SECTION =====
+.service {
+  background-color: #fef5f5;
+
+  &__container {
+    gap: 3rem;
+  }
+
+  &__group {
+    grid-template-columns: 0.8fr;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  &__item {
+    display: grid;
+    gap: 1rem;
+    text-align: center;
+    padding: 2.5rem 1.5rem;
+    background-color: $white-color;
+    border-radius: 1rem;
+    transition: $transition-400;
+
+    &:hover {
+      box-shadow: 15px 15px 0 $red-color;
+    }
+
+    &-icon {
+      width: 100px;
+      justify-self: center;
+    }
+
+    &-title {
+      font-size: 20px;
+      font-weight: $font-semibold;
+      color: $black-color;
+      margin-bottom: 15px;
+    }
+
+    &-text {
+      font-size: 15px;
+      color: $grey-color;
+      line-height: $leading-text;
+    }
   }
 }
