--- a/scss/style.scss
+++ b/scss/style.scss
@@ -355,3 +355,56 @@ img {
     }
   }
 }
+
+// ===== FEATURE SECTION =====
+.feature {
+  &__group {
+    gap: 10rem;
+  }
+
+  &__item {
+    gap: 3rem;
+  }
+
+  &__data {
+    text-align: center;
+  }
+
+  &__subtitle {
+    color: $green-color;
+  }
+
+  &__title {
+    margin-bottom: $margin-1;
+  }
+
+  &__text {
+    font-size: 15px;
+    color: $grey-color;
+    line-height: $leading-text;
+    margin-bottom: $margin-2;
+  }
+
+  &__button {
+    display: inline-flex;
+    background-color: $red-color;
+    color: $white-color;
+  }
+
+  &__item:nth-of-type(2) {
+    .feature__subtitle {
+      color: $yellow-color;
+    }
+
+    .feature__button {
+      background: transparent;
+      border: 1.9px solid $red-color;
+      color: $red-color;
+
+      &:hover {
+        background-color: $red-color;
+        color: $white-color;
+      }
+    }
+  }
+}
