--- a/scss/style.scss
+++ b/scss/style.scss
@@ -411,6 +411,8 @@ img {
 
 // ===== CALLBACK SECTION =====
 .callback {
+  background-color: #fef5f5;
+
   &__container {
     gap: 3rem;
   }
@@ -452,6 +454,91 @@ img {
 
     &-icon {
       font-size: 1.5rem;
+    }
+  }
+}
+
+// ===== FOOTER SECTION =====
+.footer {
+  padding: 5rem 0 2rem;
+
+  &__container {
+    gap: 3rem;
+  }
+
+  &__group {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 2rem;
+  }
+
+  &__item {
+    &-title {
+      font-size: 18px;
+      font-weight: $font-semibold;
+      color: $black-color;
+      margin-bottom: 1rem;
+    }
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    &-link {
+      font-size: 15px;
+      color: $grey-color;
+
+      &:hover {
+        color: $red-color;
+        text-decoration: underline;
+      }
+    }
+
+    &-text {
+      font-size: 15px;
+      color: $black-color;
+      line-height: $leading-text;
+    }
+  }
+
+  &__logo {
+    margin-bottom: 1rem;
+  }
+
+  &__text {
+    font-size: 15px;
+    color: $black-color;
+    line-height: $leading-text;
+  }
+
+  &__info {
+    padding-top: 2rem;
+    border-top: 1.9px solid rgba($color: #2e2e2e, $alpha: 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+
+    &-copyrights {
+      font-size: 15px;
+      color: $grey-color;
+    }
+
+    &-list {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    &-link {
+      font-size: 15px;
+      color: $grey-color;
+
+      &:hover {
+        color: $red-color;
+        text-decoration: underline;
+      }
     }
   }
 }
