--- a/scss/style.scss
+++ b/scss/style.scss
@@ -614,3 +614,14 @@ img {
     justify-self: center;
   }
 }
+
+// ----- Media Screen 640px -----
+@media screen and (min-width: 640px) {
+  .section-title {
+    font-size: 28px;
+  }
+
+  .service__group {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
